--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+wwwroot/lib/bootstrap_grayscale/
+wwwroot/lib/bootstrap_backup/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
