--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ bld/
 wwwroot/lib/bootstrap_grayscale/
 wwwroot/lib/bootstrap_backup/
 wwwroot/images/forum/programming_language_icons/
+wwwroot/images/theme/Alternatives/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
