Corrected som errors in the home index razor page file. Modified the post index stylings. Modified the post controller and the startup file for the admin role.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ wwwroot/lib/bootstrap_grayscale/
 wwwroot/lib/bootstrap_backup/
 wwwroot/images/forum/programming_language_icons/
 wwwroot/images/theme/Alternatives/
+wwwroot/images/users/Alternatives/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
