Built/generated the identity scafolding.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Server=localhost,1433;Database=GammaForums.Dev;MultipleActiveResultSets=true;User=SA;Password=TravelingTheSeas_234"
+  }
 }
