--- a/.gitignore
+++ b/.gitignore
@@ -535,4 +535,5 @@ Temporary Items
 # End of https://www.gitignore.io/api/visualstudiocode,macos,aspnetcore,csharp,dotnetcore
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+ScaffoldingReadMe.txt
 
