--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,11 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 # wwwroot/
-wwwroot/lib/bootstrap_grayscale/
-wwwroot/lib/bootstrap_backup/
-wwwroot/images/forum/programming_language_icons/
-wwwroot/images/theme/Alternatives/
-wwwroot/images/users/Alternatives/
+# wwwroot/lib/bootstrap_grayscale/
+# wwwroot/lib/bootstrap_backup/
+# wwwroot/images/forum/programming_language_icons/
+# wwwroot/images/theme/Alternatives/
+# wwwroot/images/users/Alternatives/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
