--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=GammaForums.Dev;MultipleActiveResultSets=true;User=SA;Password=TravelingTheSeas_234"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GammaForums.Dev;Trusted_Connection=true;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
