Modified settings and project files.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=localhost,1433;Database=GammaForums.Dev;MultipleActiveResultSets=true;User=SA;Password=TravelingTheSeas_234"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GammaForums.Dev;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
